# ChatBot

./: Dockerfile  README.md  app.py  chatbot.py  docker-compose.yaml  pyproject.toml  requirements.txt
