[project]
name = "chatbot"
version = "0.0.1"
description = "ChatBot webpage"
authors = [
    {name = "Trung Nguyen",email = "trungquang123a@gmail.com"}
]
requires-python = "==3.11.9"
dependencies = [
    "transformers (>=4.51.3)",
    "streamlit (>=1.45.1)",
    "numpy (==1.26.4)",
    "protobuf (==4.25.7)",
    "torch",
    "accelerate",
    "hf_xet"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


